java/java.hints/test/unit/data/goldenfiles/org/netbeans/modules/java/hints/errors/ErrorHintsTest/testTypeFromParama.pass
package org.netbeans.test.java.hints;

import java.awt.Rectangle;

/**
 * @author leon chiver
 */
public class TypeFromParama {

    private Rectangle r;
    
    /** Creates a new instance of TypeFromParama */
    public TypeFromParama() {
        doStuff(1, r, 2);
    }
    
    public void doStuff(int i1, Rectangle r, int i2) {
        
    }
    
}
